Fix firefox 2 pixels overflow scroll

--- a/src/style.css
+++ b/src/style.css
@@ -13,13 +13,9 @@ html, body {
 }
 
 #canvas-container {
-    width: 100%;
-    height: 100%;
-}
-
-canvas {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
 }
 
 game-panel {
